# simple-chess

./: .gitignore  CLAUDE.md  Cargo.toml  NEXT.md  PRD.md  README.md  STARTUP.md  index.html  serve.py  startup.sh
.github/workflows/: deploy.yml
assets/: explorer_cache.json
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: game-screen.spec.ts  helpers.ts  navigation.spec.ts  openings.spec.ts  setup-screen.spec.ts
scripts/: fetch_explorer_cache.py
src/: app.rs  board.rs  explorer.rs  game.rs  lib.rs  main.rs  openings.rs  setup.rs
